# llamaherd

./: .env.example  .gitignore  AGENTS.md  BRANDING.md  CLAUDE.md  DASHBOARD_FEATURES.md  Dockerfile  LICENSE  README.md  config.example.yaml  nvidia_model_cache.json  openrouter_pricing.yaml  pyproject.toml
assets/: ascii-banner.txt
llamaherd/: __init__.py  cli.py  proxy.py
tests/: test_fallback_catalog.py  test_fallback_map_runtime.py  test_fallback_provider.py  test_fmt_param_count.py  test_health.py  test_in_flight.py  test_in_flight_detail.py  test_key_cooldown.py  test_model_registry_metadata.py  test_native_bridge_conversion.py  test_sticky_routing.py  test_usage_and_dashboard.py
