[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaherd"
version = "1.0.0"
description = "Herd your Ollama Cloud subscriptions — multi-key proxy with load balancing, usage tracking, and a live dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ben Kamholtz"},
]
keywords = ["ollama", "proxy", "load-balancer", "api-gateway", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "cloudscraper>=1.2",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
llamaherd = "llamaherd.cli:main"

[tool.setuptools.packages.find]
include = ["llamaherd*"]

[tool.ruff]
line-length = 120
target-version = "py311"