[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaherd"
version = "1.0.0"
description = "Herd your Ollama Cloud subscriptions — multi-key proxy with load balancing, usage tracking, and a live dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ben Kamholtz"},
]
keywords = ["ollama", "proxy", "load-balancer", "api-gateway", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "cloudscraper>=1.2",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
# Optional: remote libSQL database (Turso, self-hosted, etc.)
# Enables http(s):// URLs in usage_db / LLAMAHERD_DB for persistent storage in containers.
# If not installed, LlamaHerd falls back to the built-in sqlite3 module.
libsql = [
    "libsql>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/bennybuoy/llamaherd"
Repository = "https://github.com/bennybuoy/llamaherd"
Issues = "https://github.com/bennybuoy/llamaherd/issues"

[project.scripts]
llamaherd = "llamaherd.cli:main"

[tool.setuptools.packages.find]
include = ["llamaherd*"]

[tool.ruff]
line-length = 120
target-version = "py311"